tests/compile_fail/bare_default_with_default_value.rs
use conflaguration::Settings;

#[derive(Settings)]
struct BadConfig {
    #[setting(default, default = 42)]
    port: u16,
}

fn main() {}
